my cv updated 2023

--- a/index.html
+++ b/index.html
@@ -13,26 +13,26 @@
     <link rel="stylesheet" href="./css/style.css">
 
     <!-- SEO Tags -->
-    <meta name="title" content="Dilip Kumar Maurya | Front End Web Developer">
+    <meta name="title" content="Dilip Kumar Maurya | Web Developer">
     <meta name="description"
-        content="Hi my name is Dilip Kumar Maurya and I am an Aspiring Front End Web developer based in New Delhi, India. Right now I am pursuing BCA from Guru Gobind Singh Indraprastha University.">
+        content="Web developer resume featuring Dilip Kumar's experience building and maintaining websites using HTML, CSS, Javascript, Wordpress, etc. Highlights include making Pradhanmantri Sangrahalaya website, as well as Completed BCA from IP University, Delhi. View Dilip Kumar's resume to learn more about their skills and qualifications.">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.dilipmaurya.in">
-    <meta property="og:title" content="Dilip Kumar Maurya | Front End Web Developer">
+    <meta property="og:title" content="Dilip Kumar Maurya | Web Developer">
     <meta property="og:description"
-        content="Hi my name is Dilip Kumar Maurya and I am a Front End Web developer based in New Delhi, India. Right now I am pursuing BCA from Guru Gobind Singh Indraprastha University.">
-    <meta property="og:image" content="./images/og.png">
+        content="Web developer resume featuring Dilip Kumar's experience building and maintaining websites using HTML, CSS, Javascript, Wordpress, etc. Highlights include making Pradhanmantri Sangrahalaya website, as well as Completed BCA from IP University, Delhi. View Dilip Kumar's resume to learn more about their skills and qualifications.">
+    <meta property="og:image" content="./images/ogimage.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.dilipmaurya.in">
-    <meta property="twitter:title" content="Dilip Kumar Maurya | Front End Web Developer">
+    <meta property="twitter:title" content="Dilip Kumar Maurya | Web Developer">
     <meta property="twitter:description"
-        content="Hi my name is Dilip Kumar Maurya and I am Front End Web developer based in New Delhi, India. Right now I am pursuing BCA from Guru Gobind Singh Indraprastha University.">
-    <meta property="twitter:image" content="./images/og.png">
-    <title>Dilip Kumar Maurya | Front End Web Developer</title>
+        content="Web developer resume featuring Dilip Kumar's experience building and maintaining websites using HTML, CSS, Javascript, Wordpress, etc. Highlights include making Pradhanmantri Sangrahalaya website, as well as Completed BCA from IP University, Delhi. View Dilip Kumar's resume to learn more about their skills and qualifications.">
+    <meta property="twitter:image" content="./images/ogimage.png">
+    <title>Dilip Kumar Maurya | Web Developer</title>
 </head>
 
 <body>
@@ -343,7 +343,8 @@
                         <div class="form__group textarea__wrapper">
                             <div>
                                 <label for="">Message</label>
-                                <textarea name="" id="" cols="30" rows="4"></textarea>
+                                <textarea name="" id="" cols="30" rows="4"
+                                    placeholder="This is a dummy form!"></textarea>
                             </div>
                         </div>
                         <button type="submit">Submit Now</button>
@@ -354,7 +355,7 @@
     </main>
 
     <footer class="container">
-        <span>© 2021. All rights reserved</span>
+        <span>© 2023. All rights reserved</span>
     </footer>
     <script src="./js/min/jquery.min.js"></script>
     <script type="text/javascript" src="./js/min/slick.min.js"></script>
